--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,5 @@ Test Decks/~$Test Deck Archetypes.xlsx
 Reference Images/*
 *.zip
 Templates/Art Templates/*
+Images/Reference Art/*
+Images/Basis Art/*
