Let's see if this works for the gitignore to ignore potential art candidates.

--- a/.gitignore
+++ b/.gitignore
@@ -6,4 +6,4 @@ Reference Images/*
 *.zip
 Templates/Art Templates/*
 */Images/Reference Art/*
-*/Images/Basis Art/*
+Custom Cards/*/*/Images/Basis Art/*
