Got the gitignore right this time.

--- a/.gitignore
+++ b/.gitignore
@@ -5,5 +5,5 @@ Test Decks/~$Test Deck Archetypes.xlsx
 Reference Images/*
 *.zip
 Templates/Art Templates/*
-*/Images/Reference Art/*
 Custom Cards/*/*/Images/Basis Art/*
+Custom Cards/*/*/Images/Reference Art/*
