--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,13 @@
 *.xcf
 *.psd
 *.pdn
-Test Decks/~$Test Deck Archetypes.xlsx
-Reference Images/*
 *.zip
-Templates/Art Templates/*
+
+Test Decks/~$Test Deck Archetypes.xlsx
+
+Reference Images/*
 Custom Cards/*/*/Images/Basis Art/*
 Custom Cards/*/*/Images/Reference Art/*
+
+Templates/Private Art Templates/*
+!Templates/Art Templates/*
