Forgot to update the .gitignore file when I reorganised the templates. This should put the templates back in the repo. I was wondering why the last commit didn't have any changes for the Rule Cards template despite me making those changes.

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@ Custom Cards/*/*/Images/Reference Art/*
 
 Templates/Private Art Templates/*
 !Templates/Art Templates/*
+!Templates/Art Templates/*/*
